fix language picker z-index

--- a/src/app/templates/shared/modal/modal.component.scss
+++ b/src/app/templates/shared/modal/modal.component.scss
@@ -7,7 +7,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 9902;
+    z-index: 9912;
     overflow: auto;
 
     .modal-body {
@@ -25,7 +25,7 @@
     left: 0;
     background-color: #000;
     opacity: 0.75;
-    z-index: 9901;
+    z-index: 9911;
   }
 }
 
